Move davidcl/ to the root directory

--- a/default.template.xhtml
+++ b/default.template.xhtml
@@ -16,25 +16,24 @@
   <meta name="robots" content="all" />
 
   <title>Clément David's homepage</title>
-  <link rel="stylesheet" type="text/css" href="/davidcl/styles/default.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/davidcl/styles/light.css" media="handheld" />
-  <link rel="stylesheet" type="text/css" href="/davidcl/styles/highlight.css" />
+  <link rel="stylesheet" type="text/css" href="/styles/default.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/styles/light.css" media="handheld" />
+  <link rel="stylesheet" type="text/css" href="/styles/highlight.css" />
   
 
-  <link rel="Shortcut Icon" type="image/x-icon" href="/davidcl/favicon.ico" />
+  <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
 <body>
   <div id="nonFooter">
     <div id="header"> 
-<a href="/davidcl/index.xhtml">davidcl</a> > 
+<a href="/index.xhtml">davidcl</a> 
 default.template
  </div>
     <div id="toc"></div>
     <div id="contents"> 
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -50,11 +49,11 @@ default.template
   <meta name="robots" content="all" />
 
   <title>Clément David's homepage</title>
-  <link rel="stylesheet" type="text/css" href="/davidcl/styles/default.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/davidcl/styles/light.css" media="handheld" />
-  <link rel="stylesheet" type="text/css" href="/davidcl/styles/highlight.css" />
+  <link rel="stylesheet" type="text/css" href="/styles/default.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/styles/light.css" media="handheld" />
+  <link rel="stylesheet" type="text/css" href="/styles/highlight.css" />
   &#95&#95:LOCAL_CSS:&#95&#95
-  <link rel="Shortcut Icon" type="image/x-icon" href="/davidcl/favicon.ico" />
+  <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
 <body>
